--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -53,7 +53,7 @@
       bottom: calc(50% - 56px);
     }
   }
-  .title{
+  .title {
     font-size: 48px;
     line-height: 56px;
   }
@@ -65,7 +65,7 @@
     text-align: center;
     &__title {
       margin-bottom: 20px;
-      &::after{
+      &::after {
         display: none;
       }
     }
@@ -74,7 +74,7 @@
       padding-bottom: 38px;
       margin-bottom: 31px;
       position: relative;
-      &::after{
+      &::after {
         content: "";
         width: 100px;
         height: 8px;
@@ -90,19 +90,184 @@
       font-size: 18px;
       line-height: 24px;
     }
-    &__items{
+    &__items {
       display: flex;
       flex-wrap: wrap;
       margin: 0 -30px;
     }
     &__item {
       width: 50%;
-      &:nth-child(even){
+      &:nth-child(even) {
         border-left: none;
       }
       &:last-child {
         border-bottom: none;
       }
+    }
+  }
+
+  ///progect///
+
+  .project {
+    padding: 40px 0 20px;
+    &__item-img {
+      min-height: 460px;
+      padding: 21px 24px;
+    }
+    &__item-inner {
+      min-height: 417px;
+    }
+    &__item-link {
+      font-size: 20px;
+      line-height: 19px;
+    }
+  }
+
+  .team {
+    padding: 20px 0 40px;
+    text-align: center;
+    &__images {
+      width: 100%;
+      margin-bottom: 40px;
+    }
+    &__title {
+      color: $text-color;
+      margin-bottom: 23px;
+    }
+    &__text {
+      margin-bottom: 84px;
+    }
+    &__btn {
+      border: none;
+      border-color: $accent;
+      text-transform: uppercase;
+      border-radius: 3px;
+      padding: 21px 26px;
+      color: $bg-color;
+      background-color: $accent;
+    }
+  }
+
+  ///news///
+
+  .news {
+    padding: 40px 0px 20px;
+    background-color: $bg-color;
+    text-align: center;
+    &__inner {
+      display: block;
+      column-count: 2;
+      column-gap: 1em;
+      z-index: 0;
+    }
+  }
+
+  ///marceting///
+
+  .marketing {
+    padding: 52px 0 91px;
+    &__icon {
+      padding-bottom: 40px;
+    }
+    &__text {
+      width: 580px;
+      font-size: 32px;
+      line-height: 34px;
+    }
+    &__name {
+      padding: 40px 0 40px;
+      font-size: 20px;
+      line-height: 23px;
+    }
+  }
+
+  ///footer///
+
+  .footer {
+    &__menu {
+      padding-bottom: 40px;
+    }
+    &__title {
+      width: 100%;
+      margin-top: 60px;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: left;
+    }
+    &__title-text {
+      font-size: 24px;
+      line-height: 26px;
+      width: 550px;
+      text-align: left;
+    }
+    &__social {
+      display: flex;
+      flex-direction: row;
+    }
+    &__icon {
+      margin-top: 0;
+      width: 100%;
+      height: 56px;
+      border: 1px solid #7ebf84;
+      border-left: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    &__icon:last-child {
+      border-right: none;
+    }
+    &__icon-social {
+      width: 18px;
+      height: 16px;
+      
+    }
+    &__menu {
+      column-count: 2;
+      column-gap: 1em;
+      padding-top: 50px;
+    }
+    &__box {
+      width: 194px;
+      height: 90px;
+      margin-bottom: 40px;
+      text-align: left;
+    }
+    &__cont-inner {
+      margin-top: 0px;
+    }
+    &__cont-li {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &__cont-li:first-child {
+      margin-bottom: 18px;
+      font-size: 18px;
+      line-height: 21px;
+    }
+    &__arrow {
+      background-color: $bg-color;
+      width: 100%;
+      height: 42px;
+    }
+    &__arrow-up{
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+    }
+    &__arrow-text {
+      text-transform: uppercase;
+      color: $text-color;
+      font-size: 16px;
+      line-height: 19px;
+      margin-right: 23px;
+    }
+    &__arrow-img{
+      margin: 20px 14px 0 0;
+      width: 16px;
+      height: 18px;
+      bottom: 5px;
+      position: relative;
     }
   }
 }
@@ -166,7 +331,7 @@
     }
     &__descr {
       text-align: left;
-      &::after{
+      &::after {
         margin-left: 0;
       }
     }
@@ -174,21 +339,171 @@
       margin-bottom: 27px;
       text-align: left;
     }
-    &__items{     
+    &__items {
       margin: 0 -40px;
     }
     &__item {
       padding: 0 65px;
       min-height: 334px;
-      &:hover{
+      &:hover {
         padding: 0 18px;
-        .services__item-inner{
+        .services__item-inner {
           padding: 35px 60px 5px;
           min-height: 288px;
         }
       }
     }
-  } 
+  }
+  ///progect///
+
+  .project {
+    padding: 80px 0 60px;
+    &__items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    &__item-img {
+      min-height: 282px;
+      width: 317px;
+      padding: 12px 14px;
+    }
+    &__item-inner {
+      min-height: 256px;
+    }
+    &__item-link {
+      padding: 30px 0;
+    }
+  }
+  .team {
+    padding: 40px 0 48px;
+    text-align: left;
+    &__inner {
+      display: flex;
+    }
+    &__images {
+      margin-bottom: 0px;
+      width: 240px;
+      height: 100%;
+      margin-right: 34px;
+    }
+    &__title {
+      margin-bottom: 7px;
+      font-style: 36px;
+      line-height: 38px;
+      padding-bottom: 28px;
+      &::after {
+        margin-left: 0;
+      }
+    }
+    &__text {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+    &__btn {
+      font-size: 18;
+      border: none;
+      border-color: $accent;
+      text-transform: uppercase;
+      border-radius: 3px;
+      padding: 21px 26px;
+      color: $bg-color;
+      background-color: $accent;
+    }
+  }
+  ///news///
+
+  .news {
+    padding: 40px 0px 20px;
+    background-color: $bg-color;
+    text-align: center;
+    &__inner {
+      display: block;
+      column-count: 2;
+      column-gap: 1em;
+      z-index: 0;
+    }
+    &__item {
+      width: 100%;
+      padding-top: 30px;
+      margin: 0;
+      display: inline-block;
+    }
+  }
+  ///marceting///
+
+  .marketing {
+    padding: 52px 0 86px;
+    &__icon {
+      padding-bottom: 40px;
+    }
+    &__text {
+      width: 100%;
+      font-size: 32px;
+      line-height: 37px;
+    }
+    &__name {
+      padding: 45px 0 40px;
+      font-size: 20px;
+      line-height: 28px;
+    }
+  }
+  ///footer///
+
+  .footer {
+    &__menu {
+      padding-bottom: 40px;
+    }
+    &__title {
+      width: 100%;
+      margin-top: 90px;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: left;
+    }
+    &__title-text {
+      font-size: 36px;
+      line-height: 32px;
+      width: 550px;
+      text-align: left;
+    }
+    &__social {
+      display: flex;
+      flex-direction: row;
+    }
+    &__icon {
+      height: 70px;
+    }
+    &__icon:last-child {
+      border-right: none;
+    }
+    &__icon-social {
+      width: 18px;
+      height: 16px;
+      
+    }
+    // &__menu {
+    //   display: flex;
+    //   flex-wrap: wrap;
+    //   justify-content: space-between;
+    //   padding-bottom: 125px;
+    // }
+    // &__box {
+    //   width: 194px;
+    //   height: 90px;
+    //   margin-bottom: 27px;
+    //   text-align: left;
+    // }
+    &__cont-li {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &__cont-li:first-child {
+      margin-bottom: 18px;
+      font-size: 18px;
+      line-height: 21px;
+    }
+  }
 }
 
 @media (min-width: 1024px) {
@@ -238,19 +553,134 @@
       padding: 0 17px;
       min-height: 277px;
       &:nth-child(2),
-      &:nth-child(6){
+      &:nth-child(6) {
         border-right: none;
       }
-      &:hover{
+      &:hover {
         padding: 0 17px;
-        .services__item-inner{
+        .services__item-inner {
           margin: 10px 0;
           padding: 21px 9px 5px;
           min-height: 255px;
         }
       }
     }
-  } 
+  }
+  ///progect///
+
+  .project {
+    &__items {
+      justify-content: center;
+    }
+    &__item-img {
+      margin: 0 12px;
+    }
+  }
+  .team {
+    padding: 80px 0;
+    &__images {
+      width: 395px;
+      margin-right: 60px;
+    }
+    &__title {
+      margin-top: 10px;
+      margin-bottom: 19px;
+      &__text {
+        line-height: 24;
+        margin-bottom: 20px;
+      }
+      &__btn {
+        font-size: 18;
+      }
+    }
+  }
+  ///news///
+
+  .news {
+    padding: 40px 0;
+    background-color: $bg-color;
+    text-align: center;
+    &__inner {
+      display: block;
+      column-count: 3;
+      column-gap: 1em;
+      z-index: 0;
+      padding: 0 30px;
+    }
+  }
+  ///marceting///
+
+  .marketing {
+    padding: 92px 0 130px;
+    &__icon {
+      padding-bottom: 40px;
+    }
+    &__text {
+      width: 100%;
+      font-size: 32px;
+      line-height: 37px;
+    }
+    &__name {
+      padding: 45px 0 40px;
+      font-size: 20px;
+      line-height: 28px;
+    }
+  }
+  ///footer///
+
+  .footer {
+    &__menu {
+      padding-bottom: 40px;
+    }
+    &__title {
+      width: 100%;
+      margin-top: 90px;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: left;
+    }
+    &__title-text {
+      font-size: 36px;
+      line-height: 32px;
+      width: 698px;
+      text-align: left;
+    }
+    &__social {
+      display: flex;
+      flex-direction: row;
+    }
+    &__icon {
+      height: 70px;
+    }
+    &__icon:last-child {
+      border-right: none;
+    }
+    &__icon-social {
+      width: 18px;
+      height: 16px;
+    }
+    &__menu {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding-bottom: 125px;
+    }
+    &__box {
+      width: 194px;
+      height: 90px;
+      margin-bottom: 27px;
+      text-align: left;
+    }
+    &__cont-li {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &__cont-li:first-child {
+      margin-bottom: 18px;
+      font-size: 18px;
+      line-height: 21px;
+    }
+  }
 }
 
 @media (min-width: 1440px) {
@@ -258,7 +688,8 @@
     margin-left: 61px;
   }
   .container {
-    min-width: 1440px;
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 0 40px;
   }
   .top-slider {
@@ -303,12 +734,12 @@
 
   .services {
     padding: 0;
-    &__inner{
+    &__inner {
       display: flex;
       justify-content: space-between;
       margin-right: -40px;
     }
-    &__head{
+    &__head {
       width: 25%;
       min-width: 350px;
       margin-right: 100px;
@@ -321,7 +752,7 @@
       padding-bottom: 38px;
       margin-bottom: 35px;
     }
-    &__items{
+    &__items {
       width: 68%;
       margin: 0;
     }
@@ -329,14 +760,116 @@
       width: 230px;
       padding: 0 5px;
       height: 273px;
-      &:hover{
+      &:hover {
         padding: 0 5px;
-        .services__item-inner{
+        .services__item-inner {
           margin: 5px 0;
           padding: 10px 3px 5px;
           min-height: 255px;
         }
       }
     }
-  }  
+  }
+  ///progect///
+
+  .project {
+    &__items {
+      flex-wrap: nowrap;
+      justify-content: space-between;
+    }
+    &__item-img {
+      width: 300px;
+      margin: 0;
+    }
+  }
+  .team {
+    padding: 50px 0;
+    &__images {
+      width: 470px;
+      margin-right: 93px;
+    }
+    &__title {
+      margin-bottom: 40px;
+      &__text {
+        margin-bottom: 40px;
+        width: 553px;
+      }
+    }
+  }
+  ///news///
+
+  .news {
+    padding: 40px 0px 20px;
+    background-color: $bg-color;
+    text-align: center;
+    &__inner {
+      display: block;
+      column-count: 4;
+      column-gap: 10px;
+      z-index: 0;
+      padding: 0 90px;
+    }
+  }
+  ///footer///
+
+  .footer {
+    &__menu {
+      padding-bottom: 40px;
+    }
+    &__title {
+      width: 100%;
+      margin-top: 90px;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: left;
+    }
+    &__title-text {
+      font-size: 36px;
+      line-height: 32px;
+      width: 798px;
+      text-align: left;
+    }
+    &__social {
+      display: flex;
+      flex-direction: row;
+    }
+    &__icon {
+      height: 70px;
+    }
+    &__icon:last-child {
+      border-right: none;
+    }
+    &__icon-social {
+      width: 18px;
+      height: 16px;
+    }
+    &__menu {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding-bottom: 125px;
+    }
+    &__box {
+      width: 194px;
+      height: 90px;
+      margin-bottom: 27px;
+      text-align: left;
+    }
+    &__cont-li {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &__cont-li:first-child {
+      margin-bottom: 18px;
+      font-size: 18px;
+      line-height: 21px;
+    }
+    &__arrow-img{
+      margin: 20px 146px 0 0;
+      width: 16px;
+      height: 18px;
+      bottom: 5px;
+      position: relative;
+    }
+  }
 }
