--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -209,18 +209,32 @@
       width: 100%;
       height: 56px;
       border: 1px solid #7ebf84;
-      border-left: none;
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: all .3s;
+      &:hover{
+        border: 1px solid #fff;
+      }
+    }
+    &__icon:first-child {
+      border-left: none;
+      &:hover{
+        border: 1px solid #fff;
+        border-left: none;
+      }
     }
     &__icon:last-child {
       border-right: none;
+      &:hover{
+        border: 1px solid #fff;
+        border-right: none;
+      }
     }
     &__icon-social {
       width: 18px;
       height: 16px;
-      
+      margin: 50px;
     }
     &__menu {
       column-count: 2;
@@ -244,6 +258,25 @@
       margin-bottom: 18px;
       font-size: 18px;
       line-height: 21px;
+    }
+    &__link{
+      padding-left: 5px;
+      position: relative;
+      transition: all .2s;
+      &:hover{
+        padding-left: 20px; 
+        &::after {
+          content: "";
+          position: absolute;
+          background-color: #7ebf84;
+          width: 2px;
+          height: 20px;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+        }
+      }
     }
     &__arrow {
       background-color: $bg-color;
@@ -868,7 +901,7 @@
       margin: 20px 146px 0 0;
       width: 16px;
       height: 18px;
-      bottom: 5px;
+      bottom: 15px;
       position: relative;
     }
   }
