--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,10 @@
 @import "fonts";
 @import "global";
 
+html {
+  scroll-behavior: smooth;
+}
+
 .header {
   background-color: $accent;
   &__inner {
@@ -399,7 +403,7 @@
     cursor: pointer;
     width: 80px;
     height: 80px;
-    padding-top: 25px;
+    padding-top: 5%;
     z-index: -1;
     position: absolute;
     top: 18%;
@@ -433,6 +437,7 @@
   &__slider {
     text-align: center;
     margin: 0 auto;
+    cursor: pointer;
   }
   &__icon {
     display: flex;
@@ -547,6 +552,8 @@
     line-height: 21px;
     @extend %RobotoCondensed-700;
   }
+ 
+  
   &__arrow {
     background-color: $bg-color;
     width: 100%;
